# quant-factor-research

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_public_factor_validation.py  run_research.py
.github/workflows/: ci.yml  portfolio-sync.yml
data/: README.md
docs/: factor_research_report.md  failure_analysis.md  project_introduction.md  public_factor_validation.md  resume_bullets.md
docs/logs/: daily_report_template.md  weekly_report_template.md
docs/logs/daily/: 2026-07-17.md
docs/logs/weekly/: week00_onboarding.md
results/: README.md  cost_sensitivity.csv  factor_ic.csv  factor_ic_summary.csv  factor_quantile_returns.csv  factor_quantile_summary.csv  metrics.csv  monthly_returns.csv  run_manifest.json
results/public_factors/: README.md  official_current_snapshot.csv
results/public_factors/latest/: factor_correlations.csv  factor_summary.csv  momentum_decile_average_returns.csv  momentum_decile_summary.csv  source_metadata.json  subperiod_summary.csv
src/quant_factor/: __init__.py  backtest.py  data.py  factors.py  metrics.py  public_data.py
src/reproducible_multifactor_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_public_data.py  test_research.py
