[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reproducible-multifactor-research"
version = "0.1.0"
description = "An educational and auditable monthly equity factor research pipeline."
requires-python = ">=3.10"
authors = [
  {name = "WenqiDing-CompFin"}
]
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<3",
  "matplotlib>=3.6,<4",
  "bottleneck>=1.3.6,<2"
]

[project.optional-dependencies]
dev = ["pytest>=7,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
